# gen/http/query_svc/server/encode_decode.go
@@ -50,6 +50,7 @@ func DecodeQueryResourcesRequest(mux goahttp.Muxer, decoder func(*http.Request) 
 			dateFrom    *string
 			dateTo      *string
 			filters     []string
+			filtersOr   []string
 			celFilter   *string
 			sort        string
 			pageToken   *string
@@ -100,6 +101,7 @@ func DecodeQueryResourcesRequest(mux goahttp.Muxer, decoder func(*http.Request) 
 			dateTo = &dateToRaw
 		}
 		filters = qp["filters"]
+		filtersOr = qp["filters_or"]
 		celFilterRaw := qp.Get("cel_filter")
 		if celFilterRaw != "" {
 			celFilter = &celFilterRaw
@@ -147,7 +149,7 @@ func DecodeQueryResourcesRequest(mux goahttp.Muxer, decoder func(*http.Request) 
 		if err != nil {
 			return nil, err
 		}
-		payload := NewQueryResourcesPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, celFilter, sort, pageToken, pageSize, bearerToken)
+		payload := NewQueryResourcesPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, filtersOr, celFilter, sort, pageToken, pageSize, bearerToken)
 		if strings.Contains(payload.BearerToken, " ") {
 			// Remove authorization scheme prefix (e.g. "Bearer")
 			cred := strings.SplitN(payload.BearerToken, " ", 2)[1]
@@ -243,6 +245,7 @@ func DecodeQueryResourcesCountRequest(mux goahttp.Muxer, decoder func(*http.Requ
 			dateFrom    *string
 			dateTo      *string
 			filters     []string
+			filtersOr   []string
 			bearerToken string
 			err         error
 		)
@@ -286,6 +289,7 @@ func DecodeQueryResourcesCountRequest(mux goahttp.Muxer, decoder func(*http.Requ
 			dateTo = &dateToRaw
 		}
 		filters = qp["filters"]
+		filtersOr = qp["filters_or"]
 		bearerToken = r.Header.Get("Authorization")
 		if bearerToken == "" {
 			err = goa.MergeErrors(err, goa.MissingFieldError("bearer_token", "header"))
@@ -293,7 +297,7 @@ func DecodeQueryResourcesCountRequest(mux goahttp.Muxer, decoder func(*http.Requ
 		if err != nil {
 			return nil, err
 		}
-		payload := NewQueryResourcesCountPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, bearerToken)
+		payload := NewQueryResourcesCountPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, filtersOr, bearerToken)
 		if strings.Contains(payload.BearerToken, " ") {
 			// Remove authorization scheme prefix (e.g. "Bearer")
 			cred := strings.SplitN(payload.BearerToken, " ", 2)[1]
